Fix uneven day column widths with table-layout: fixed

--- a/styles.css
+++ b/styles.css
@@ -222,6 +222,7 @@ main {
 ===== */
 .time-table {
   border-collapse: collapse;
+  table-layout: fixed;
   width: 100%;
   user-select: none;
 }
